--- a/templates/students/student_detail.html
+++ b/templates/students/student_detail.html
@@ -64,6 +64,7 @@
 					<tr>
 						<th>Instructors</th>
 						<th>Subjects</th>
+						<th>Units</th>
 						<th>Day</th>
 						<th>Time Start</th>
 						<th>Time End</th>
@@ -75,6 +76,7 @@
 					<tr>
 						<td>{{cs.instructor.instructor.get_full_name|title}}</td>
 						<td>{{cs.subject.descriptive_title|title}}</td>
+						<td>{{cs.subject.units}}</td>
 						<td>{{cs.day|title}}</td>
 						<td>{{cs.start_time|time}}</td>
 						<td>{{cs.end_time|time}}</td>
