--- a/templates/courses/course_list.html
+++ b/templates/courses/course_list.html
@@ -31,7 +31,7 @@
         <div class="row">
         	{% for course in courselist %}
         	<div class="col-sm-12">
-        		<h5>{{forloop.counter}}.) <a href="">{{course.course_name|upper}}</a></h5>
+        		<h5>{{forloop.counter}}.) <a href="{% url 'course:detail' course.id %}">{{course.course_name|upper}}</a></h5>
         		<p>{{course.strand|title}} | {{course.department|title}}</p>
         		{% if perms.courses.change_course %}<small><a href="{% url 'course:edit' course.id %}" class="btn btn-secondary btn-sm"><i class="fa fa-edit"></i> Edit</a></small>{% endif %}
         		<hr>
